# pydantic-panel

./: .bumpversion.cfg  .gitignore  .readthedocs.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  README.rst  pyproject.toml  tasks.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: publish.yml
docs/: conf.py  environment.yml  index.rst  installation.rst  usage.rst
pydantic_panel/: __init__.py  dispatchers.py  numpy.py  pandas.py  pane.py  widgets.py
tests/: __init__.py  test_pydantic_panel.py
